--- a/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsPerfDependencies.json
+++ b/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsPerfDependencies.json
@@ -66,9 +66,7 @@
       "icon": "external link",
       "includeVars": true,
       "keepTime": true,
-      "tags": [
-        "Azure-AppInsights-Perf"
-      ],
+      "tags": ["Azure-AppInsights-Perf"],
       "targetBlank": true,
       "title": "Azure Application Insights Performance Dashboards",
       "tooltip": "",
@@ -226,9 +224,7 @@
         "footer": {
           "countRows": false,
           "fields": "",
-          "reducer": [
-            "sum"
-          ],
+          "reducer": ["sum"],
           "show": false
         },
         "showHeader": true
@@ -238,9 +234,7 @@
         {
           "azureLogAnalytics": {
             "query": "set truncationmaxrecords=10000;set truncationmaxsize=67108864;set truncationmaxrecords=10000;set truncationmaxsize=67108864;\r\ndependencies\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\"\r\n| where duration <= $MaxDuration and duration >= $MinDuration\r\n| summarize Count=sum(itemCount), AVG_Duration=sum(duration * itemCount)/sum(itemCount), Duration_95th=percentile(duration,95) by type\r\n| sort by Count desc\r\n| take 3",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
           "datasource": {
@@ -418,9 +412,7 @@
         {
           "azureLogAnalytics": {
             "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| where duration >= $MinDuration and duration <= $MaxDuration\n// calculate average dependency duration for all dependencies\n| summarize AVG = avg(duration), P95 = percentiles(duration, 95), MAX = max(duration) by bin(timestamp, $__interval)\n| project timestamp, AVG = AVG/1000, P95 = P95/1000, MAX = MAX/1000\n| order by timestamp asc\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
           "datasource": {
@@ -492,9 +484,7 @@
               "id": "byNames",
               "options": {
                 "mode": "exclude",
-                "names": [
-                  "Request Count"
-                ],
+                "names": ["Request Count"],
                 "prefix": "All except:",
                 "readOnly": true
               }
@@ -535,9 +525,7 @@
         {
           "azureLogAnalytics": {
             "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| where duration >= $MinDuration and duration <= $MaxDuration\n// calculate average request duration for all requests\n| extend ResponseTime = duration/1000\n| project timestamp, ResponseTime\n| order by timestamp asc\n\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
           "datasource": {
@@ -687,9 +675,7 @@
         {
           "azureLogAnalytics": {
             "query": "\ndependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| where duration >= $MinDuration and duration <= $MaxDuration\n// calculate average request duration for all requests\n| summarize Count = count() by bin(timestamp, $__interval)\n| order by timestamp asc\n\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
           "datasource": {
@@ -779,9 +765,7 @@
         {
           "azureLogAnalytics": {
             "query": "\ndependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| where duration >= $MinDuration and duration <= $MaxDuration\n// calculate average request duration for all requests\n| extend ResponseTime = duration/1000\n| project timestamp, ResponseTime\n| order by timestamp asc\n\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
           "datasource": {
@@ -941,9 +925,7 @@
         {
           "azureLogAnalytics": {
             "query": "// distribution of dependencies by logarithmic duration buckets\nlet numberOfBuckets = 100;\n// filter to a subset of dependencies\n\nlet dataset = dependencies\n| where client_Type != \"Browser\"\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| where duration >= $MinDuration and duration <= $MaxDuration\n| extend value=duration\n| project itemCount, value;\n// calculate the maximum duration for all dependencies\nlet maxValue=toscalar(dataset | summarize max(value));\n// calculate the logarithmic base that determines the start of each bucket\n// use the max duration to ensure the scale spans all possible durations in the data set\nlet bucketBase = pow(maxValue, 1/todouble(numberOfBuckets));\n// define a table with an index for each bucket to allow for buckets with 0 dependencies\nlet bucketSlots=range bucketSlot from 0 to numberOfBuckets - 1 step 1;\n// map dependency counts to the correct bucket and apply to the scale by joining with the complete set of buckets\nbucketSlots | join kind=leftouter (dataset\n// any durations under 1ms are rounded up to 1 ms\n// calls with durations under 1ms can be viewed in more detail using the linear scale\n| extend adjustedValue = iff(value<1, 1.0, value)\n// calculate the bucket slot for each dependency by applying logarithmic scale\n| extend bucketSlotRaw = tolong(bin(log(adjustedValue)/log(bucketBase), 1))\n// calculate the dependency count by duration bucket (rounded to whole number)\n| summarize count_=sum(itemCount) by bucketSlot=iff(bucketSlotRaw > numberOfBuckets - 1, numberOfBuckets - 1, bucketSlotRaw)) on bucketSlot\n| order by bucketSlot asc\n// calculate the real duration value for each bucket based on both the index and the bucket base (rounded to whole number)\n| project\n    [\"Duration (ms)\"]=floor(pow(bucketBase, bucketSlot), 1),\n    counts=iff(isnull(count_), 0, count_)\n| summarize Count=sum(counts) by [\"Duration (ms)\"]\n| where ['Duration (ms)'] >= $MinDuration\n| order by [\"Duration (ms)\"] asc\n\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
           "datasource": {
@@ -1015,9 +997,7 @@
         "justifyMode": "auto",
         "orientation": "auto",
         "reduceOptions": {
-          "calcs": [
-            "lastNotNull"
-          ],
+          "calcs": ["lastNotNull"],
           "fields": "",
           "values": false
         },
@@ -1028,9 +1008,7 @@
         {
           "azureLogAnalytics": {
             "query": "\ndependencies\n| where $__timeFilter(timestamp)\n// additional filters can be applied here\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| where duration >= $MinDuration and duration <= $MaxDuration\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| count\n\n\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
           "datasource": {
@@ -1112,9 +1090,7 @@
         "justifyMode": "auto",
         "orientation": "auto",
         "reduceOptions": {
-          "calcs": [
-            "lastNotNull"
-          ],
+          "calcs": ["lastNotNull"],
           "fields": "",
           "values": false
         },
@@ -1125,9 +1101,7 @@
         {
           "azureLogAnalytics": {
             "query": "\ndependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| where duration >= $MinDuration and duration <= $MaxDuration\n| where success == false\n| count\n\n\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
           "datasource": {
@@ -1317,9 +1291,7 @@
         "footer": {
           "countRows": false,
           "fields": "",
-          "reducer": [
-            "sum"
-          ],
+          "reducer": ["sum"],
           "show": false
         },
         "showHeader": true,
@@ -1335,9 +1307,7 @@
         {
           "azureLogAnalytics": {
             "query": "set truncationmaxrecords=10000;set truncationmaxsize=67108864; \nlet m = dependencies\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"  \n| project itemCount, duration, typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0]), name, type, target;\nm\n| summarize Count=sum(itemCount), Avg=sum(itemCount * duration) / sum(itemCount)\n| project [\"Dependency name\"]=\"All\", Avg, Count\n| union(\nm\n| summarize Count=sum(itemCount), Avg=sum(itemCount * duration) / sum(itemCount) by typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0]), name, target, type\n| sort by Avg desc\n| project [\"Dependency name\"]=strcat(typeTransform, \": \", name , \" \", targetTransform), Avg, Count, type, target, name)\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
           "datasource": {
@@ -1600,9 +1570,7 @@
         "footer": {
           "countRows": false,
           "fields": "",
-          "reducer": [
-            "sum"
-          ],
+          "reducer": ["sum"],
           "show": false
         },
         "showHeader": true,
@@ -1613,9 +1581,7 @@
         {
           "azureLogAnalytics": {
             "query": "let min_length_8 = (s: string) {\n    let len = strlen(s);\n    case(len == 1, strcat(s, s, s, s, s, s, s, s),\n        len == 2 or len == 3, strcat(s, s, s, s),\n        len == 4 or len == 5 or len == 6 or len == 7, strcat(s, s),\n        s)\n};\nlet ai_hash = (s: string) {\n    abs(toint(__hash_djb2(min_length_8(s))))\n};\n\ndependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| extend typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(typeTransform, \": \", name, \" \", targetTransform)\n| where [\"Dependency Name\"] in ($dependency)\n| where duration >= $MinDuration and duration <= $MaxDuration\n//| where returncode in ($return_code)\n| project [\"Dependency Name\"], target, ResponseCode = resultCode, ResponseTime = duration, OperationID = operation_Id, Score=ai_hash(operation_Id), type, name\n| top 20 by Score asc\n\n\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ],
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
           "datasource": {
@@ -1637,9 +1603,7 @@
   "revision": 1,
   "schemaVersion": 38,
   "style": "dark",
-  "tags": [
-    "Azure-AppInsights-Perf"
-  ],
+  "tags": ["Azure-AppInsights-Perf"],
   "templating": {
     "list": [
       {
@@ -1780,9 +1744,7 @@
         "query": {
           "azureLogAnalytics": {
             "query": "dependencies\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\"\r\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\r\n| project [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\r\n| summarize count() by [\"Dependency Name\"]\r\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ]
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"]
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
@@ -1810,9 +1772,7 @@
         "query": {
           "azureLogAnalytics": {
             "query": "dependencies\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\"\r\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\r\n| project [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target), duration\r\n| where ['Dependency Name'] in ($dependency)\r\n| top 1 by duration asc\r\n| project tostring(duration)\r\n\r\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ]
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"]
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
@@ -1840,9 +1800,7 @@
         "query": {
           "azureLogAnalytics": {
             "query": "dependencies\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\"\r\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\r\n| project [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target), duration\r\n| where ['Dependency Name'] in ($dependency)\r\n| top 1 by duration desc\r\n| project tostring(duration)\r\n\r\n",
-            "resources": [
-              "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
-            ]
+            "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"]
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
